// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderSplitPanel — snapshot tests > renders empty state 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0mSearch (0/0)[0m                [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0mPreview[0m                                          [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39mNo items found[0m              [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ↓ prev  esc close[0m                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`renderSplitPanel — snapshot tests > renders standard panel layout 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0mSearch (5/10)[0m               [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0mPreview[0m                                          [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39msrc/app.ts:1:const x = 42;[0m  [38;2;250;208;0m│[39mconst x = 42;[0m                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39msrc/b.ts:5:foo bar[0m          [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39mlib/c.ts:10:baz qux[0m         [38;2;250;208;0m│[39m// more code[0m                                     [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39msrc/d.ts:15:hello world[0m     [38;2;250;208;0m│[39mfunction foo() {[0m                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39msrc/e.ts:20:test case[0m       [38;2;250;208;0m│[39m  return 42;[0m                                     [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m}[0m                                                [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ↓ prev  esc close[0m                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`renderSplitPanel — snapshot tests > renders with focused item highlight 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0mSearch (2/5)[0m                [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0msrc/b.ts[0m                                         [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39msrc/a.ts:1:normal item[0m      [38;2;250;208;0m│[39mfocus me[0m                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39msrc/b.ts:5:focus me[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39mlib/c.ts:10:another item[0m    [38;2;250;208;0m│[39m// preview content[0m                               [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m  const y = 10;[0m                                  [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ↓ prev  esc close[0m                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
